// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link/Neutral Default - left aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Neutral disabled 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: default;
  color: rgba(0,0,0,0.32);
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
  disabled={true}
  size={16}
  type="#59636f"
>
  <span
    href="#"
  >
    Awesome Link
  </span>
</div>
`;

exports[`Storyshots Link/Neutral external 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    Awesome Link
    <i
      className="wg-external-link margin-left"
    />
  </a>
</div>
`;

exports[`Storyshots Link/Neutral right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": "500px",
    }
  }
>
  <div
    className="c0"
    disabled={false}
    size={16}
    type="#59636f"
  >
    <a
      href="#"
    >
      Awesome Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link/Neutral with left icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    <i
      className="wg-place margin-right }"
    />
    Awesome Link
  </a>
</div>
`;

exports[`Storyshots Link/Neutral with right icon 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c0 i.margin-left {
  margin-left: 8px;
}

.c0 i.margin-right {
  margin-right: 8px;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a {
  color: inherit;
}

.c0:hover {
  color: #3498db;
}

<div
  className="c0"
  disabled={false}
  size={16}
  type="#59636f"
>
  <a
    href="#"
  >
    Awesome Link
    <i
      className="wg-place margin-left }"
    />
  </a>
</div>
`;
